# SVF

./: .cmake-format.py  .gitignore  CMakeLists.txt
cmake/: ConfigHdr.cmake.in  SVF.pc.cmake.in  SVFConfig.cmake.in
svf/: CMakeLists.txt
svf-llvm/: CMakeLists.txt
svf-llvm/lib/: extapi.c
svf-llvm/tools/: CMakeLists.txt
svf-llvm/tools/AE/: CMakeLists.txt
svf-llvm/tools/CFL/: CMakeLists.txt
svf-llvm/tools/DDA/: CMakeLists.txt
svf-llvm/tools/Example/: CMakeLists.txt
svf-llvm/tools/LLVM2SVF/: CMakeLists.txt
svf-llvm/tools/MTA/: CMakeLists.txt
svf-llvm/tools/SABER/: CMakeLists.txt
svf-llvm/tools/WPA/: CMakeLists.txt
svf/include/Graphs/: SVFGOPT.h  VFG.h
svf/include/MSSA/: SVFGBuilder.h
svf/include/WPA/: VersionedFlowSensitive.h
svf/lib/Graphs/: SVFGOPT.cpp
svf/lib/MSSA/: SVFGBuilder.cpp
svf/lib/MemoryModel/: PointerAnalysis.cpp
svf/lib/Util/: ExtAPI.cpp
